fix: title bar 1px jump when empty, empty state label

--- a/src/components/toolbar/title-bar/styles/title-bar.module.css
+++ b/src/components/toolbar/title-bar/styles/title-bar.module.css
@@ -9,6 +9,8 @@
     display: flex;
     flex-grow: 1;
     min-inline-size: 0;
+    align-items: center;
+    min-block-size: 30px;
 }
 
 .cell {
